feat: 新增刪除所有圖片功能、swageer 註解修改
